--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<section>
 			<div class="box">
 				<div class="box1">
-					<img  class="img" src="file:///home/nithin/Downloads/html.png">
+				<img  class="img" src="./IMAGES/html.png">
 				</div>
 				<div class="caps">HTML5</div>
 				<div class="para">You will write semantic markup in HTML5 which is the latest standard of core technology of web.
@@ -23,7 +23,7 @@
 		<section>
 			<div class="box">
 				<div class="box1">
-					<img  class="img" src="file:///home/nithin/Downloads/css.png">
+				<img  class="img" src="./IMAGES/css.png">
 				</div>
 				<div class="caps">CSS3</div>
 				<div class="para">You will style webpages using CSS3,leveraging on the new CSS3 modules,making modern websites.
@@ -33,7 +33,7 @@
 		<section>
 			<div class="box">
 				<div class="box1">
-					<img  class="img" src="file:///home/nithin/Downloads/responsive.png">
+				<img  class="img" src="./IMAGES/responsive.png">
 				</div>
 				<div class="caps">Responsive Web Design</div>
 				<div class="para">You will build websites that look awesome not only on desktops, but also on mobile phones and tablets. 
@@ -43,7 +43,7 @@
 		<section>
 			<div class="box">
 				<div class="box1">
-					<img  class="img" src="file:///home/nithin/Downloads/ui-ux.png">
+				<img  class="img" src="./IMAGES/ui-ux.png">
 				</div>
 				<div class="caps">UI & UX Design</div>
 				<div class="para">You will learn basics of UI & UX Design and use these concepts in build apps that are both functional and usable. 
@@ -53,7 +53,7 @@
 		<section>
 			<div class="box">
 				<div class="box1">
-					<img  class="img" src="file:///home/nithin/Downloads/js.jpg">
+				<img  class="img" src="./IMAGES/js.jpg">
 				</div>
 				<div class="caps">JavaScript</div>
 				<div class="para">You will define the behavior of web pages using JavaScript. You will dive deeper into amazing parts of JavaScript.
@@ -63,7 +63,7 @@
 		<section>
 			<div class="box">
 				<div class="box1">
-					<img  class="img" src="file:///home/nithin/Downloads/jquery.png">
+				<img  class="img" src="./IMAGES/jquery.png">
 				</div>
 				<div class="caps">jQuery</div>
 				<div class="para">You will enhance the behavior of web pages leveraging on jQuery and jQuery plug-ins. 
@@ -73,7 +73,7 @@
 		<section>
 			<div class="box">
 				<div class="box1">
-					<img  class="img" src="file:///home/nithin/Downloads/ts.png">
+				<img  class="img" src="./IMAGES/ts.png">
 				</div>
 				<div class="caps">TypeScript</div>
 				<div class="para">You will start writing object oriented programs using TypeScript. You will build games using TypeScript. 
@@ -83,7 +83,7 @@
 		<section>
 			<div class="box">
 				<div class="box1">
-					<img  class="img" src="file:///home/nithin/Downloads/RxJS.png">
+				<img  class="img" src="./IMAGES/RxJS.png">
 				</div>
 				<div class="caps">RxJS</div>
 				<div class="para">You will build event-driven, resilient and responsive apps using Reactive Architectures. 
@@ -93,7 +93,7 @@
 		<section>
 			<div class="box">
 				<div class="box1">
-					<img  class="img" src="file:///home/nithin/Downloads/unix.png">
+				<img  class="img" src="./IMAGES/unix.png">
 				</div>
 				<div class="caps">Unix</div>
 				<div class="para">You will become a ninja hacker who prefer command line to Graphical User Interface.
@@ -103,7 +103,7 @@
 		<section>
 			<div class="box">
 				<div class="box1">
-					<img  class="img" src="file:///home/nithin/Downloads/git.png">
+				<img  class="img" src="./IMAGES/git.png">
 				</div>
 				<div class="caps">Git & Heroku</div>
 				<div class="para">You will start following git workflow using github. You will also deploy your applications with Heroku. 
@@ -113,7 +113,7 @@
 		<section>
 			<div class="box">
 				<div class="box1">
-					<img  class="img" src="file:///home/nithin/Downloads/npm.png">
+				<img  class="img" src="./IMAGES/npm.png">
 				</div>
 				<div class="caps">npm</div>
 				<div class="para">You will use npm, the default package manager for Node.js, to reuse some of the best utilities written already.
@@ -123,7 +123,7 @@
 		<section>
 			<div class="box">
 				<div class="box1">
-					<img  class="img" src="file:///home/nithin/Downloads/docker.png">
+				<img  class="img" src="./IMAGES/docker.png">
 				</div>
 				<div class="caps">Docker</div>
 				<div class="para">You will use Docker to simplify configuration, increase your productivity, isolate your apps, and automate deployments.
@@ -133,7 +133,7 @@
 		<section>
 			<div class="box">
 				<div class="box1">
-					<img  class="img" src="file:///home/nithin/Downloads/mongodb.png">
+				<img  class="img" src="./IMAGES/mongodb.png">
 				</div>
 				<div class="caps">MongoDB</div>
 				<div class="para">You will use MongoDB to store your app's data in a JSON-like document format that can be quickly accessed via fast queries. 
@@ -143,7 +143,7 @@
 		<section>
 			<div class="box">
 				<div class="box1">
-					<img  class="img" src="file:///home/nithin/Downloads/angular2.png">
+				<img  class="img" src="./IMAGES/angular2.png">
 				</div>
 				<div class="caps">Angular 2</div>
 				<div class="para">You will build single page applications using Angular2. You will build full-fledge web apps that can be used in real life. 
@@ -153,7 +153,7 @@
 		<section>
 			<div class="box">
 				<div class="box1">
-					<img  class="img" src="file:///home/nithin/Downloads/ionic.png">
+				<img  class="img" src="./IMAGES/ionic.png">
 				</div>
 				<div class="caps">Ionic 2</div>
 				<div class="para">You will build hybrid mobile applications using Ionic2 framework. You have reached eternity! You are now Yoda! 
@@ -163,7 +163,7 @@
 		<section>
 			<div class="box">
 				<div class="box1">
-					<img  class="img" src="file:///home/nithin/Downloads/firebase.png">
+				<img  class="img" src="./IMAGES/firebase.png">
 				</div>
 				<div class="caps">Firebase</div>
 				<div class="para">You will use Firebase as a backend as a service to build realtime applications without any back-end coding. 
@@ -173,7 +173,7 @@
 		<section>
 			<div class="box">
 				<div class="box1">
-					<img  class="img" src="file:///home/nithin/Downloads/functional-programming.png">
+				<img  class="img" src="./IMAGES/functional-programming.png">
 				</div>
 				<div class="caps">Functional Programming</div>
 				<div class="para">Functional Programming is on a rise. You will solve problems using side effect free functions as basic building blocks. 
@@ -183,7 +183,7 @@
 		<section>
 			<div class="box">
 				<div class="box1">
-					<img  class="img" src="file:///home/nithin/Downloads/ruby.png">
+				<img  class="img" src="./IMAGES/ruby.png">
 				</div>
 				<div class="caps">Ruby</div>
 				<div class="para">You will start writing ruby scripts to solve daily problems. You will also explore and author RubyGems.
@@ -193,7 +193,7 @@
 		<section>
 			<div class="box">
 				<div class="box1">
-					<img  class="img" src="file:///home/nithin/Downloads/rails.png">
+				<img  class="img" src="./IMAGES/rails.png">
 				</div>
 				<div class="caps">Ruby on Rails</div>
 				<div class="para">You will build advanced web applications using Ruby on Rails. You will be API development guru! 
@@ -203,7 +203,7 @@
 		<section>
 			<div class="box">
 				<div class="box1">
-					<img  class="img" src="file:///home/nithin/Downloads/api.png">
+				<img  class="img" src="./IMAGES/api.png">
 				</div>
 				<div class="caps">API</div>
 				<div class="para">You will build API that can be used by mobile applications and outside world. You will also consume others' API. 
@@ -213,7 +213,7 @@
 		<section>
 			<div class="box">
 				<div class="box1">
-					<img  class="img" src="file:///home/nithin/Downloads/testing.png">
+				<img  class="img" src="./IMAGES/testing.png">
 				</div>
 				<div class="caps">Software Testing</div>
 				<div class="para">While observing Test Driven Development, you will automate unit, functional and integration testing. 
@@ -223,7 +223,7 @@
 		<section>
 			<div class="box">
 				<div class="box1">
-					<img  class="img" src="file:///home/nithin/Downloads/algorithms.png">
+				<img  class="img" src="./IMAGES/algorithms.png">
 				</div>
 				<div class="caps">Algorithms</div>
 				<div class="para">Knowledge of Algorithms is a key factor in cracking coding interviews. You will use them to solve problems. 
@@ -233,7 +233,7 @@
 		<section>
 			<div class="box">
 				<div class="box1">
-					<img  class="img" src="file:///home/nithin/Downloads/data-structures.png">
+				<img  class="img" src="./IMAGES/data-structures.png">
 				</div>
 				<div class="caps">Data Structures</div>
 				<div class="para">You will understand famous data structures and use the right data structures to optimize the performance of your app. 
@@ -243,7 +243,7 @@
 		<section>
 			<div class="box">
 				<div class="box1">
-					<img  class="img" src="file:///home/nithin/Downloads/design.png">
+				<img  class="img" src="./IMAGES/design.png">
 				</div>
 				<div class="caps">Software Design & Architecture</div>
 				<div class="para"> You will be the architect for your projects. You also look into performance, security, and other ops. 
