--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<div class="heading">
-		<h2>You'll learn</h2>
+		<h2>You'll Learn</h2>
 	</div>
 	<div class="container">
 		<section>
